FullQa New/src/objects/Partner_Launch_Task__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Partner Launch Tasks</relationshipLabel>
        <relationshipName>Partner_Launch_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner Launch Task</label>
    <nameField>
        <label>Partner Launch Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Launch Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>